# ai-finance

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.json
config/: config.example.json
docker/: init-db.sql
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/2026-07-20/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: last_query_stamp  (+1 more)
tests/: support.py  test_agent_create.py  test_agent_dto.py  test_agent_dto_routing.py  test_agent_registry.py  test_agent_router.py  test_agent_service.py  test_agent_service_di.py  test_agent_service_port.py  test_bootstrap_app.py  test_checkpointer_helper.py  test_container.py  test_context_window.py  test_conversation_agent.py  test_conversation_aggregate.py  test_conversation_assembly.py  test_conversation_commands.py  test_conversation_events.py  test_conversation_repository.py  test_conversation_router.py  test_conversation_value_objects.py  test_domain_event.py  test_event_publisher.py  test_http_schemas.py  test_id_generator.py  test_intent_value_objects.py  test_interfaces_api.py  test_llm_client_factory.py  test_llm_config.py  test_llm_factory.py  test_llm_intent_recognizer.py  test_nacos_client.py  test_routing_agent_service.py  test_routing_integration.py  test_routing_middleware.py  test_routing_policy.py  test_send_message_use_case.py  test_skill_agent_builder.py  test_smoke.py  test_sse_encoder.py  (+1 more)
(+113 files in other folders)
