[project]
name = "ai-finance"
version = "0.1.0"
description = "账票服务:发票收票与稽核 (DDD)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi==0.139.0",
    "jinja2>=3.1.6",
    "langchain==1.3.13",
    "langchain-anthropic>=1.4.8",
    "langchain-deepseek==1.1.0",
    "langchain-openai>=1.3.5",
    "nacos-sdk-python>=3.2.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "sqlalchemy==2.0.51",
    "sse-starlette>=3.4.5",
    "uvicorn>=0.51.0",
]

[project.scripts]
ai-finance = "bootstrap.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# src 布局:各 DDD 层作为顶层包
packages = [
    "src/bootstrap",
    "src/domain",
    "src/application",
    "src/infrastructure",
    "src/interfaces",
]
